--- a/src/app/features/store-detail/components/catalogue/catalogue.component.html
+++ b/src/app/features/store-detail/components/catalogue/catalogue.component.html
@@ -24,6 +24,6 @@
   </div>
 </div>
 
-<div class="row button-vermas">
-  <button *ngIf="!finished" class="col-center btn ngx-button" (click)="getTotalProducts()">Ver más</button>
+<div class="has-text-centered has-margin-t-4">
+  <button *ngIf="!finished" class="button is-primary is-outlined button-ngx" (click)="getTotalProducts()">Ver más</button>
 </div>
