input search in catalogue

--- a/src/app/features/main-search/components/page/page.component.html
+++ b/src/app/features/main-search/components/page/page.component.html
@@ -35,9 +35,9 @@
         </div>
       </div>
     </div>
-    <div class="main-text has-margin-t-4 is-flex-columns">
-      <span>Ahora es más facil localizar el</span>
-      <span>producto que necesitas</span>
+    <div class="main-text has-margin-t-4">
+      <p>Ahora es más facil localizar el</p>
+      <p>producto que necesitas</p>
     </div>
   </div>
 </div>
