--- a/src/app/features/store-detail/components/head-store/head-store.component.html
+++ b/src/app/features/store-detail/components/head-store/head-store.component.html
@@ -20,7 +20,7 @@
         <a class="navbar-item" *ngIf="data.promotionImages.length > 0" (click)="triggerScrollTo('promotion')"><span>Promoción</span></a>
         <a class="navbar-item" (click)="triggerScrollTo('contact')"><span>Contactos</span></a>
         <a class="navbar-item"><span> Login </span></a>
-        <a class="navbar-item" href="mainSearcher">
+        <a class="navbar-item" href="/">
           <span><img src="assets/img/logoNGXWhite.png" width="20" class="logo-negux"> </span>
         </a>
       </div>
