--- a/src/app/features/search-result/components/product-card/product-card.component.scss
+++ b/src/app/features/search-result/components/product-card/product-card.component.scss
@@ -1,6 +1,6 @@
 .product-card {
   &.card {
-    margin: 10px 10px 7px;
+    margin: 5px;
     border: 1px solid rgb(229, 230, 231);
     border-radius: 2px;
     box-shadow: 2px 4px 4px -3px rgba(0, 0, 0, 0.3);
