--- a/src/app/features/store-detail/components/catalogue/catalogue.component.html
+++ b/src/app/features/store-detail/components/catalogue/catalogue.component.html
@@ -8,22 +8,25 @@
 </div>
 
 <!-- Search section -->
-
-<div class="columns">
-  <div class="column form-search is-6 is-offset-6 is-flex">
-    <input class="input is-primary" type="text" placeholder="Buscar en catálogo" [(ngModel)]="query" (keyup.enter)="getTotalProducts()">
-    <button class="button is-primary is-pulled-right" (click)="getTotalProducts()"><i class="search-1icon-"></i></button>
+<div class="is-clearfix has-padding-t-6 has-padding-b-6">
+  <div class="column is-paddingless is-full-mobile-extra is-two-thirds-mobile is-half-tablet is-one-third-widescreen is-pulled-right">
+    <div class="input-search is-flex">
+      <input class="" type="text" placeholder="Buscar en catálogo" [(ngModel)]="query" (keyup.enter)="getTotalProducts()">
+      <button class="" (click)="getTotalProducts()"><i class="search-1icon-"></i></button>
+    </div>
   </div>
 </div>
 
 <!-- Catalogue List -->
 
 <div class="columns is-flex is-multiline">
-  <div class="column is-paddingless is-paddingless is-one-quarter-widescreen is-one-third-tablet is-half-mobile is-full-mobile-extra" *ngFor="let product of products">
+  <div class="column is-paddingless is-paddingless is-one-quarter-widescreen is-one-third-tablet is-half-mobile is-full-mobile-extra"
+    *ngFor="let product of products">
     <app-product-card [data]="product" [isStore]="true"></app-product-card>
   </div>
 </div>
 
 <div class="has-text-centered has-margin-t-4">
-  <button *ngIf="!finished" class="button is-primary is-outlined button-ngx" (click)="getTotalProducts()">Ver más</button>
+  <button class="button is-primary is-outlined button-ngx" *ngIf="finished" (click)="getTotalProducts()">Ver más</button>
+  <!-- <button *ngIf="!finished" class="button is-primary is-outlined button-ngx" (click)="getTotalProducts()">Ver más</button> -->
 </div>
