improving style popup

--- a/src/app/features/product-detail/components/comments/comments.component.html
+++ b/src/app/features/product-detail/components/comments/comments.component.html
@@ -1,5 +1,5 @@
-<p class="comment-title has-margin-t-1">Deja tu comentario</p>
-<div class="field is-horizontal form-comment is-clearfix">
+<p class="comment-title has-margin-t-4">Deja tu comentario</p>
+<div class="field is-horizontal form-comment is-clearfix has-padding-b-4">
   <div class="field-body">
     <div class="field">
       <p class="control">
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="field-label is-marginless">
-    <button class="button is-primary is-pulled-right" (click)="sendComment(content)">Enviar</button>
+    <button class="button is-outlined is-primary is-pulled-right" (click)="sendComment(content)">Enviar</button>
   </div>
 </div>
 
