--- a/src/app/features/product-detail/components/image-data/image-data.component.scss
+++ b/src/app/features/product-detail/components/image-data/image-data.component.scss
@@ -9,6 +9,11 @@ $colorInfo: #0066c0;
 }
 
 .product-data {
+  .product-title {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    color: #0e0e0eee;
+  }
   .qualification {
     margin-right: 0.3rem;
     .qualification-text {
