--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,20 +1,15 @@
 <div class="modal modal-fx-slideRight" #modal>
   <div class="modal-background"></div>
   <div class="modal-card modal-content {{ config.data.size? 'is-' + config.data.size : '' }}">
-    <header class="modal-card-head" *ngIf="config.data.title">
-      <p class="modal-card-title">
-        {{ config.data.title }}
-      </p>
-      <button class="delete" aria-label="close" (click)="close()"></button>
-    </header>
+    <div class="close-button" (click)="close()"></div>
     <section class="modal-card-body">
       <ng-template appInsertion></ng-template>
     </section>
     <footer class="modal-card-foot" *ngIf="config.data.optionOk || config.data.optionCancel">
-      <button class="button is-primary" *ngIf="config.data.optionOk" (click)="accept()">
+      <button class="button is-outlined is-primary" *ngIf="config.data.optionOk" (click)="accept()">
         {{ config.data.optionOk }}
       </button>
-      <button class="button" *ngIf="config.data.optionCancel" (click)="cancel()">
+      <button class="button is-outlined" *ngIf="config.data.optionCancel" (click)="cancel()">
         {{ config.data.optionCancel }}
       </button>
     </footer>
