--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -24,13 +24,50 @@
     }
   }
   .modal-card {
+    .close-button {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 1.5rem;
+      height: 1.5rem;
+      cursor: pointer;
+      &::before,
+      &::after{
+        position: absolute;
+        top: -3px;
+        left: 8px;
+        content: "";
+        height: 1.5rem;
+        width: 1px;
+        background-color: rgb(17, 17, 17);
+        transition: 0.25s;
+      }
+      &::before {
+        transform: rotate(45deg); 
+      }
+      &::after {
+        transform: rotate(-45deg); 
+      }
+      &:hover {
+        &::before {
+          transform: rotate(135deg); 
+        }
+        &::after {
+          transform: rotate(45deg); 
+        }
+      }
+    }
     .modal-card-head {
+      border-radius: 0;
       .modal-card-title {
         font-size: 1.3rem;
       }
     }
     .modal-card-foot {
       justify-content: flex-end;
+      border-radius: 0;
+      background-color: white;
+      border-top: 0;
     }
   }
 }
